test/tests/errors/error-class-func-out-of-scope.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        public func x(): int { 1 }
    }

    output x();
}